- Text fixes
- Fix various bugs when importing saves

Changes by Kida:
- Fixed Sleek themeing issues.
- Stat clean up, and additions.
- Current game stats now save.
- Current game stats now reset on reset.
- Resources now only warn on values that can be maxed; and can tick.
- Did some odd vudo magic on the game log; and grouping by dates...
(Hope this does not mess things up....)

v 1.1.7.8 (7 dec)

Coding Changes by Kida:

Stats and Achievements:
- Added New Stats: Total Clicks, Buildings Constructed, and Avg. Kittens Born (Per Century)
- Created Stat Groups: All-Time and Current Game
- Fixed some grammatical preferences for Stats.
- 2 new super cool achievements added; with bonus stars.
- Added Star-Achievements to: utopiaProject
- Added Achievement Header

Styling/Refactoring
- Updated and Refactored many of the 'inline' styles to use 'classes'.
- Updated default css for previous inline styles.

Interface Changes by Kida:

- Added Sleek Theme (In Beta) v0.1
Features:
- Updated to a cleaner web-font. (Roboto) - Tooltip is now fixed to bottom-right of screen.
- Interface is more 'flexible'
- Improved window layout for larger screens. - Scrollbars on visible when needed now.
- New CSS styled scrollbars.
- Fixed various rendering errors.
- Updated button styles; and color. Flashes on Clicks. - Updated tab text
- Resolved log messages wrapping errors.
- Select Boxes and Import/Export Buttons updated to reflect theme.
- Dialog styles and sizes updated.
- Achievements style updated.
Notes: CSS is a hodgepodge of spaghetti-coding right now. Anyone is welcome to refine.

v 1.1.7.7 (27 nov)

Elders duration and energy bonus slightly
Elder energy bonus will be now calculated correctly

v 1.1.7.6 (26 nov)

Changes by coderpatsy:

- Fix space beacons producing less starcharts than they should
- Fix display of trade race buy/sell resource names

Changes by ArcanisCz:

-Header toolbar initial render-update

Space Manufacturing ratio was reduced from 100% to 75%